Fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html {
 	background-color: black;
-	overflow: hidden;
+
 }
 header {
 	width: 100%;
